--- a/index.html
+++ b/index.html
@@ -3,27 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X-LIST | The Discipline Audit</title>
+    <title>X-LIST Support</title>
     <style>
-        body { background-color: #0d0005; color: #e0e0e0; font-family: 'Helvetica', sans-serif; text-align: center; padding: 50px; }
-        .logo { width: 150px; margin-bottom: 20px; }
-        h1 { color: #8a0a29; letter-spacing: 2px; }
-        p { max-width: 600px; margin: 0 auto 30px; line-height: 1.6; color: #b0b0b0; }
-        .button { background-color: #8a0a29; color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; }
-        .footer { margin-top: 100px; font-size: 0.8em; color: #555; }
-        a { color: #8a0a29; text-decoration: none; }
+        body { 
+            background-color: #0d0005; 
+            color: #e0e0e0; 
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif; 
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        h1 { color: #8a0a29; letter-spacing: 3px; font-weight: 900; margin-bottom: 5px; }
+        .support-text { color: #888; margin-bottom: 30px; font-size: 0.9rem; }
+        .email-link { 
+            color: #e0e0e0; 
+            text-decoration: none; 
+            border-bottom: 1px solid #8a0a29;
+            padding-bottom: 2px;
+            font-weight: bold;
+        }
+        .footer { margin-top: 50px; font-size: 0.7rem; color: #333; }
     </style>
 </head>
 <body>
-    <img src="https://raw.githubusercontent.com/yourusername/x-list-app/main/logo.png" alt="X-LIST Logo" class="logo">
     <h1>X-LIST</h1>
-    <p>Your energy is your currency. Stop surrendering to your impulses. X-LIST is a strict enforcement system for your personal audit. Master your self-control. Become a ghost to your past.</p>
+    <p class="support-text">Official Support Page</p>
     
-    <a href="#" class="button">Coming Soon to App Store</a>
+    <p>For any inquiries or technical support, please contact:</p>
+    <a href="mailto:seninmail@gmail.com" class="email-link">seninmail@gmail.com</a>
 
     <div class="footer">
-        <p>Contact Support: <a href="mailto:seninmailadresin@gmail.com">Support Email Here</a></p>
-        <p><a href="/privacy-policy">Privacy Policy</a> | © 2026 X-LIST Audit</p>
+        © 2026 X-LIST Audit System
     </div>
 </body>
 </html>
